<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_product_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productName"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/edit_fragment_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterProductName"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productQuantity"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/edit_fragment_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterProductQuantity"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productType"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <AutoCompleteTextView
        android:id="@+id/edit_fragment_product_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selectProductType"
        android:inputType="none"
        android:focusable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listName"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <AutoCompleteTextView
        android:id="@+id/edit_fragment_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selectListName"
        android:inputType="none"
        android:focusable="false"/>

    <Button
        android:id="@+id/button_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/edit"/>
</LinearLayout>